--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <form action="/admin/login" method="POST">
-        <input type="text" name="email" />
-        <input type="password" name="password" />
-        <button type="submit">Submit</button>
+      <input type="text" name="email" />
+      <input type="password" name="password" />
+      <button type="submit">Submit</button>
     </form>
-    
-</body>
+  </body>
 </html>
