--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
   </head>
   <body>
     <form action="/admin/login" method="POST">
-      <input type="text" name="email" />
+      <input type="text" name="username" />
       <input type="password" name="password" />
       <button type="submit">Submit</button>
     </form>
