--- a/views/books-admin.html
+++ b/views/books-admin.html
@@ -25,6 +25,7 @@
   </header>
   <div class="main" id="portfolio">
     <section class="grid-item main">
+      <a class="add-book" href=""><span>Add Books</span> </a>
       <div class="items">
         <div class="item">
           <div class="book-img">
@@ -37,11 +38,11 @@
             <h4 class="b-name">The End of Me</h4>
           </div>
           <div class="buttons">
-            <div class="view-btn button">
-              <a href=""><p>View</p></a>
+            <div class="button">
+              <a href=""><p>Edit</p></a>
             </div>
-            <div class="dl-btn button">
-              <a href=""><p>Download</p></a>
+            <div class="button">
+              <a href=""><p>Delete</p></a>
             </div>
           </div>
         </div>
@@ -57,10 +58,10 @@
           </div>
           <div class="buttons">
             <div class="button">
-              <a href=""><p>View</p></a>
+              <a href=""><p>Edit</p></a>
             </div>
             <div class="button">
-              <a href=""><p>Download</p></a>
+              <a href=""><p>Delete</p></a>
             </div>
           </div>
         </div>
