Admin pages edit buttons added,along with new section

--- a/views/index-admin.html
+++ b/views/index-admin.html
@@ -7,6 +7,7 @@
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
   />
   <link rel="stylesheet" href="../public/css/main.css" />
+  <link rel="stylesheet" href="../public/css/admin.css" />
   <link rel="icon" href="favicon.ico" />
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300|Roboto+Mono:700|Raleway:100"
@@ -17,17 +18,32 @@
   <header class="main-header" id="home">
     <nav class="header-container clearfix">
       <ul class="main-nav">
-        <li><a class="link1" href="#home">Home</a></li>
-        <li><a class="link2" href="#portfolio">Books</a></li>
+        <li><a class="link1" href="">Home</a></li>
+        <li><a class="link2" href="">Books</a></li>
+        <li><a class="link2" href="">Admin</a></li>
       </ul>
     </nav>
 
     <div class="banner">
+      <div class="edit">
+        <a href=""
+          ><img src="../public/images/edit.png" alt="" class="edit-button"
+        /></a>
+      </div>
       <img
         class="profile-picture"
         src="https://i.postimg.cc/L5mqpHZd/responsive-layout-profile.png"
         alt="Profile Picture"
       />
+      <div class="edit">
+        <a href=""
+          ><img
+            src="../public/images/edit-blue.png"
+            alt=""
+            class="edit-button"
+            id="intro-button"
+        /></a>
+      </div>
       <p class="intro-text">
         <span>Professor's Name</span> <br /><br />
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident
@@ -37,8 +53,60 @@
       </p>
     </div>
   </header>
-
+  <section class="grid-item">
+    <div class="education item">
+      <h3>Education</h3>
+      <div class="edit">
+        <a href=""
+          ><img
+            src="../public/images/edit-blue.png"
+            alt=""
+            class="edit-button"
+            id="grid-button"
+        /></a>
+      </div>
+      <div class="edu-details">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus, libero
+        <br />
+        Lorem ipsum dolor sit amet consectetur.
+        <br />
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        <br />
+        Lorem ipsum dolor sit.
+      </div>
+    </div>
+    <div class="experience item">
+      <h3>Experience</h3>
+      <div class="edit">
+        <a href=""
+          ><img
+            src="../public/images/edit-blue.png"
+            alt=""
+            class="edit-button"
+            id="grid-button"
+        /></a>
+      </div>
+      <div class="exp-details">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus, libero
+        <br />
+        Lorem ipsum dolor sit amet consectetur.
+        <br />
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        <br />
+        Lorem ipsum dolor sit.
+      </div>
+    </div>
+  </section>
   <div class="bottom">
+    <div class="edit">
+      <a href=""
+        ><img
+          src="../public/images/edit-blue.png"
+          alt=""
+          class="edit-button"
+          id="contact-button"
+      /></a>
+    </div>
     <div class="section-contact" id="contact">
       <h2>Contact</h2>
       <p>
