--- a/views/index.html
+++ b/views/index.html
@@ -38,6 +38,33 @@
     </div>
   </header>
 
+  <section class="grid-item">
+    <div class="education item">
+      <h3>Education</h3>
+      <div class="edu-details">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus, libero
+        <br />
+        Lorem ipsum dolor sit amet consectetur.
+        <br />
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        <br />
+        Lorem ipsum dolor sit.
+      </div>
+    </div>
+    <div class="experience item">
+      <h3>Experience</h3>
+      <div class="exp-details">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus, libero
+        <br />
+        Lorem ipsum dolor sit amet consectetur.
+        <br />
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        <br />
+        Lorem ipsum dolor sit.
+      </div>
+    </div>
+  </section>
+
   <div class="bottom">
     <div class="section-contact" id="contact">
       <h2>Contact</h2>
