--- a/public/css/main.css
+++ b/public/css/main.css
@@ -112,12 +112,6 @@ h2 {
   font-weight: bold;
 }
 
-footer li:nth-child(5),
-footer li:nth-child(4),
-footer li:nth-child(3),
-footer li:nth-child(2) {
-  display: none;
-}
 .section-contact {
   background: #070707;
 }
@@ -146,6 +140,19 @@ h2 {
   padding-top: 30px;
 }
 
+.grid-item {
+  color: #87f5fb;
+  display: grid;
+  grid-template-columns: 1fr ;
+  text-align: center;
+  margin-top: 11vh;
+  margin-bottom: 10vh;
+  column-gap: 20px;
+}
+.item {
+  font-size: 1.4rem;
+}
+
 /* Media Query for Tablet */
 @media (min-width: 768px) {
   .main-nav li {
@@ -163,6 +170,9 @@ h2 {
   .link4:hover {
     transition: color 0.5s;
     color: orange;
+  }
+  .grid-item{
+    grid-template-columns: 1fr 1fr;
   }
   .intro-text {
     width: 45%;
@@ -258,6 +268,7 @@ h2 {
     width: 40%;
   }
   .banner {
+    position: relative;
     width: 80%;
     margin: 0 auto;
   }
@@ -292,6 +303,9 @@ h2 {
   .back-to-top {
     float: right;
     margin-top: 28px;
+  }
+  .grid-item{
+    grid-template-columns: 1fr 1fr;
   }
   .back-to-top li {
     float: left;
