All Admin Forms added

--- a/views/books.html
+++ b/views/books.html
@@ -8,6 +8,7 @@
   />
   <link rel="stylesheet" href="../public/css/main.css" />
   <link rel="stylesheet" href="../public/css/books.css" />
+  <link rel="stylesheet" href="../public/css/modal.css" />
   <link rel="icon" href="favicon.ico" />
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300|Roboto+Mono:700|Raleway:100"
@@ -15,6 +16,7 @@
   />
 </head>
 <body>
+
   <header class="main-header" id="home">
     <nav class="header-container clearfix">
       <ul class="main-nav">
@@ -24,9 +26,9 @@
     </nav>
   </header>
   <div class="main" id="portfolio">
-    <section class="grid-item main">
-      <div class="items">
-        <div class="item">
+    <section class="books-grid main">
+      <div class="books">
+        <div class="book">
           <div class="book-img">
             <img
               id="book-cover"
@@ -45,7 +47,7 @@
             </div>
           </div>
         </div>
-        <div class="item">
+        <div class="book">
           <div class="book-img">
             <img
               id="book-cover"
