--- a/public/css/books.css
+++ b/public/css/books.css
@@ -1,7 +1,6 @@
-.grid-item {
+.books-grid {
   color: #3626a7;;
   font-size: 1em;
-  /* font-weight: 700; */
 }
 
 a:link {
@@ -14,15 +13,15 @@ a:link {
     padding: 0;
     background-color: #070707;
   }
-  .grid-item {
+  .books-grid {
     margin-top: 20px;
   }
-  .item {
+  .book {
     width: 90% !important;
   }
 }
 
-.items {
+.books {
   position: relative;
   width: 100%;
   transition: all 0.2s;
@@ -31,11 +30,11 @@ a:link {
   user-select: none;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-books: center;
   flex-wrap: wrap;
 }
 
-.items::-webkit-scrollbar {
+.books::-webkit-scrollbar {
   /* WebKit */
   width: 0px;
 }
@@ -45,13 +44,13 @@ a:link {
   width: 0px;
 }
 
-.items.active {
+.books.active {
   cursor: grabbing;
   cursor: -webkit-grabbing;
   transform: scale(1);
 }
 
-.items .before {
+.books .before {
   left: 0;
   background: linear-gradient(
     linear,
@@ -62,37 +61,7 @@ a:link {
   );
 }
 
-.item1 {
-  background-image: url("../image/events/1.jpg");
-  background-size: cover;
-}
-
-.item2 {
-  background-image: url("../image/events/2.jpg");
-  background-size: cover;
-}
-
-.item3 {
-  background-image: url("../image/events/3.jpg");
-  background-size: cover;
-}
-
-.item4 {
-  background-image: url("../image/events/4.jpg");
-  background-size: cover;
-}
-
-.item5 {
-  background-image: url("../image/events/1.jpg");
-  background-size: cover;
-}
-
-.item6 {
-  background-image: url("../image/events/2.jpg");
-  background-size: cover;
-}
-
-.item {
+.book {
   display: flex;
   flex-direction: column;
   justify-content: initial;
@@ -111,7 +80,7 @@ a:link {
   padding-top: 1rem;
 }
 @media screen and (max-width: 800px) {
-  .item {
+  .book {
     /* min-height: 200px; */
     height: 45vh;
     width: 25%;
@@ -119,7 +88,7 @@ a:link {
   }
 }
 
-.item:hover {
+.book:hover {
   transform: translateY(-1px);
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.397);
   transform: translateY(-10px);
