--- a/views/books-admin.html
+++ b/views/books-admin.html
@@ -8,6 +8,7 @@
   />
   <link rel="stylesheet" href="../public/css/main.css" />
   <link rel="stylesheet" href="../public/css/books.css" />
+  <link rel="stylesheet" href="../public/css/modal.css" />
   <link rel="icon" href="favicon.ico" />
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300|Roboto+Mono:700|Raleway:100"
@@ -15,6 +16,54 @@
   />
 </head>
 <body>
+    <!-- Modals -->
+  <!-- New Book Form -->
+  <div class="form-container">
+    <form id="form" action="" method="post">
+      <h3>Add A Book</h3>
+      <h4>Please enter Book name</h4>
+      <fieldset>
+        <input
+          type="text"
+          placeholder="Book Name"
+          tabindex="1"
+          required
+          autofocus
+        />
+      </fieldset>
+      <h4>Please upload Book </h4>
+      <fieldset>
+        <input
+          type="file"
+          tabindex="1"
+          required
+          autofocus
+        />
+      </fieldset>
+      <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+    </form>
+  </div>
+  <!--End of  New Book Form -->
+  <!-- Edit Book Form -->
+  <div class="form-container">
+    <form id="form" action="" method="post">
+      <h3>Book Name</h3>
+      <h4>Please enter new Book name</h4>
+      <fieldset>
+        <input
+          type="text"
+          placeholder="Book Name"
+          tabindex="1"
+          required
+          autofocus
+        />
+      </fieldset>
+      <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Update</button>
+      <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Delete</button>
+    </form>
+  </div>
+  <!-- Edit Book FormEnd of Edit Book Form -->
+  <!-- End of Modals -->
   <header class="main-header" id="home">
     <nav class="header-container clearfix">
       <ul class="main-nav">
@@ -24,10 +73,10 @@
     </nav>
   </header>
   <div class="main" id="portfolio">
-    <section class="grid-item main">
+    <section class="books-grid main">
       <a class="add-book" href=""><span>Add Books</span> </a>
-      <div class="items">
-        <div class="item">
+      <div class="books">
+        <div class="book">
           <div class="book-img">
             <img
               id="book-cover"
@@ -46,7 +95,7 @@
             </div>
           </div>
         </div>
-        <div class="item">
+        <div class="book">
           <div class="book-img">
             <img
               id="book-cover"
