--- a/public/css/books.css
+++ b/public/css/books.css
@@ -1,10 +1,10 @@
 .books-grid {
-  color: #3626a7;;
+  color: #3626a7;
   font-size: 1em;
 }
 
 a:link {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 @media (max-width: 800px) {
@@ -76,7 +76,7 @@ a:link {
   transform: translateY(0px);
   transition: ease 0.5s;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.068);
-  background-color:aliceblue;
+  background-color: aliceblue;
   padding-top: 1rem;
 }
 @media screen and (max-width: 800px) {
@@ -96,13 +96,13 @@ a:link {
 
 /* Main Body */
 
-#book-cover{
-    width: 50%;
-    object-fit: contain;
+#book-cover {
+  width: 50%;
+  object-fit: contain;
 }
-.book-img{
-    overflow: hidden;
-    object-fit: cover;
+.book-img {
+  overflow: hidden;
+  object-fit: cover;
 }
 
 .book-name {
@@ -121,21 +121,30 @@ p {
   overflow: hidden;
 }
 
-.buttons{
-    padding-top: 40px;
-    display: flex;
-    justify-content: space-around;
+.buttons {
+  padding-top: 40px;
+  display: flex;
+  justify-content: space-around;
 }
 
-.button{
+.button {
   overflow: hidden;
 }
 
-.add-book{
+.add-book {
   text-decoration: none;
   color: #87f5fb;
+  cursor: pointer;
+  background-color: #070707;
+  border: 0;
+}
+.edit-book {
+  text-decoration: none;
+  color: blue;
+  cursor: pointer;
+  border: 0;
 }
 
-.add-book:hover{
+.add-book:hover {
   color: orange;
 }
