--- a/views/books-admin.html
+++ b/views/books-admin.html
@@ -83,14 +83,6 @@
     </div>
     <!-- Edit Book FormEnd of Edit Book Form -->
     <!-- End of Modals -->
-    <header class="main-header" id="home">
-      <nav class="header-container clearfix">
-        <ul class="main-nav">
-          <li><a class="link1" href="#home">Home</a></li>
-          <li><a class="link2" href="#portfolio">Books</a></li>
-        </ul>
-      </nav>
-    </header>
     <div class="main" id="portfolio">
       <section class="books-grid main">
         <button class="add-book" onclick="addbooks()">Add Books</button>
@@ -104,7 +96,6 @@
             </div>
             <div class="buttons">
               <div class="button">
-                <!-- <a href=""><p>Edit</p></a> -->
                 <button class="edit-book" onclick="editbook()">Edit</button>
               </div>
               <div class="button">
@@ -121,10 +112,10 @@
             </div>
             <div class="buttons">
               <div class="button">
-                <a href="" onclick="editbook()"><p>Edit</p></a>
+                <button class="edit-book" onclick="editbook()">Edit</button>
               </div>
               <div class="button">
-                <a href=""><p>Delete</p></a>
+                <button class="edit-book">Delete</button>
               </div>
             </div>
           </div>
