--- a/views/index-admin.ejs
+++ b/views/index-admin.ejs
@@ -6,9 +6,9 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
   />
-  <link rel="stylesheet" href="../public/css/main.css" />
-  <link rel="stylesheet" href="../public/css/admin.css" />
-  <link rel="stylesheet" href="../public/css/modal.css" />
+  <link rel="stylesheet" href="/css/main.css" />
+  <link rel="stylesheet" href="/css/admin.css" />
+  <link rel="stylesheet" href="/css/modal.css" />
   <link rel="icon" href="favicon.ico" />
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300|Roboto+Mono:700|Raleway:100"
@@ -178,8 +178,8 @@
   <header class="main-header" id="home">
     <nav class="header-container clearfix">
       <ul class="main-nav">
-        <li><a class="link1" href="">Home</a></li>
-        <li><a class="link2" href="">Books</a></li>
+        <li><a class="link1" href="/admin/profile">Home</a></li>
+        <li><a class="link2" href="/admin/profile/books">Books</a></li>
         <li><a class="link2" href="" onclick="userform()">Admin</a></li>
       </ul>
     </nav>
