--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -9,7 +9,7 @@
 	-webkit-font-smoothing:antialiased;
 	-moz-font-smoothing:antialiased;
 	-o-font-smoothing:antialiased;
-	font-smoothing:antialiased;
+	/* font-smoothing:antialiased; */
 	text-rendering:optimizeLegibility;
 }
 
@@ -23,6 +23,12 @@
     z-index: -1;
 	box-shadow: 7px 2px 28px -4px rgba(0,0,0,0.75);
 	opacity: 0;
+}
+@media screen and (max-width:768px){
+	.form-container{
+		width: 90%;
+		margin-left: 5%;
+	}
 }
 
 #form input[type="text"], #form input[type="email"], #form input[type="tel"], #form input[type="url"], #form textarea, #form button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
