--- a/views/admin-login.ejs
+++ b/views/admin-login.ejs
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../public/css/login.css" />
+    <link rel="stylesheet" href="/css/login.css" />
   </head>
   <body>
     <body class="align">
       <div class="grid">
         <form
-          action="https://httpbin.org/post"
+          action="/admin/login"
           method="POST"
           class="form login"
         >
@@ -53,7 +53,7 @@
           </div>
 
           <div class="form__field">
-            <input type="submit" value="Sign In" />
+            <input type="submit" value="Login" />
           </div>
         </form>
       </div>
